@@ -18,6 +18,11 @@
 }
 
 
+.selection_highlight {
+  background-color: #FFFF99;
+}
+
+
 
 .full_admin_top_options
 {
