@@ -1,6 +1,11 @@
 FlightPath 5.x Changelog
 ========================
 
+2016-03-30
+  Added extra class names when drawing courses and group selection rows.  Also, created new CSS class called "selection_highlight" that gets
+  added and removed over certain items.  Updated theme css files to accomodate.
+  
+
 2016-03-29
   Fixed bug in what if selection screen.
   
